Bug 470820 - Unable to configure Google Calendar
Summary: Unable to configure Google Calendar
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Google Resource (other bugs)
Version First Reported In: 5.23.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 475028 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-09 06:25 UTC by Adam Jimerson
Modified: 2023-11-10 19:08 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
pim.log from debuginfod (45.97 KB, text/x-log)
2023-09-17 21:11 UTC, jshand2013
Details
debuginfod (116.32 KB, text/x-log)
2023-09-27 20:57 UTC, jshand2013
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Jimerson 2023-06-09 06:25:38 UTC
SUMMARY
After being notified that Kalendar was no longer syncing with Google Calendar and that I needed to re-add my account, I went into the settings → Accounts and removed the old Google Accounts configured there. I then went to add my accounts again by clicking “Add Account” on that same screen, then selecting “Google Groupware” which created a new “Google Groupware (not configured)” item.  When I select that item, and click “Modify” I get presented with a new window that has a “Configure…” button, but clicking that does nothing.

STEPS TO REPRODUCE
1.  Open Kalendar Settings
2.  Go to Accounts
3.  Click "Add Account" and select "Google Groupware"
4. Click the newly created "Google Groupware (not configured)" item
5. Click "Modify" in the dialog window
6. Click "Configure..." in the "Google Groupware (not configured)" window that comes up

OBSERVED RESULT
Upon clicking "Configure..." nothing happens.

EXPECTED RESULT
Some way to enter in my account details and authenticate and allow Kalendar to access my Google Calendar(s).

SOFTWARE/OS VERSIONS
OS: Arch Linux
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.106.0
QT Version: 5.15.9
Kernel Version: 6.3.6-arch1-1

ADDITIONAL INFORMATION
Comment 1 Adam Jimerson 2023-06-09 07:04:39 UTC
This appears to be more of an issue with Akonadi than Kalendar as I get the same result using KOrganizer and Akonadi Console, as such I have moved this ticket from Kalendar accordingly. If I'm wrong, feel free to correct.
Comment 2 Peter Ries 2023-09-14 15:34:21 UTC
same issue for me. after google calendar stopped syncing (most likely when update kde gear from 23.04 -> 23.08)

today when 23.08.01 came out calendar still was not syncing.

I removed google groupware account and re-added it. But it came with no dialog. Just being displayed "Google Groupware (not configured)". Klick on Edit does not do anything.

Reboot, clear ~/.cache... no effect - any way to help with logs? How / where to look?
Comment 3 jshand2013 2023-09-17 21:09:26 UTC
i have also found this with:

Operating System: openSUSE Tumbleweed 20230915
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Kernel Version: 6.5.3-1-default (64-bit)
Graphics Platform: X11
Processors: 2 × AMD A9-9420e RADEON R5, 5 COMPUTE CORES 2C+3G
Memory: 7.2 GiB of RAM
Graphics Processor: AMD Radeon R5 Graphics
Manufacturer: Acer
Product Name: Aspire A315-21G
System Version: V1.12
Comment 4 jshand2013 2023-09-17 21:10:23 UTC
(In reply to Adam Jimerson from comment #0)
> SUMMARY
> After being notified that Kalendar was no longer syncing with Google
> Calendar and that I needed to re-add my account, I went into the settings →
> Accounts and removed the old Google Accounts configured there. I then went
> to add my accounts again by clicking “Add Account” on that same screen, then
> selecting “Google Groupware” which created a new “Google Groupware (not
> configured)” item.  When I select that item, and click “Modify” I get
> presented with a new window that has a “Configure…” button, but clicking
> that does nothing.
> 
> STEPS TO REPRODUCE
> 1.  Open Kalendar Settings
> 2.  Go to Accounts
> 3.  Click "Add Account" and select "Google Groupware"
> 4. Click the newly created "Google Groupware (not configured)" item
> 5. Click "Modify" in the dialog window
> 6. Click "Configure..." in the "Google Groupware (not configured)" window
> that comes up
> 
> OBSERVED RESULT
> Upon clicking "Configure..." nothing happens.
> 
> EXPECTED RESULT
> Some way to enter in my account details and authenticate and allow Kalendar
> to access my Google Calendar(s).
> 
> SOFTWARE/OS VERSIONS
> OS: Arch Linux
> KDE Plasma Version: 5.27.5
> KDE Frameworks Version: 5.106.0
> QT Version: 5.15.9
> Kernel Version: 6.3.6-arch1-1
> 
> ADDITIONAL INFORMATION

i get no window when i push modify
Comment 5 jshand2013 2023-09-17 21:11:07 UTC
Created attachment 161681 [details]
pim.log from debuginfod
Comment 6 Carl Schwan 2023-09-19 17:04:14 UTC
Git commit 8393e92d56ecb31b2dd65d15d046f8e02565f5e3 by Carl Schwan.
Committed on 19/09/2023 at 18:59.
Pushed by carlschwan into branch 'kf6'.

Actually start job to read secret key

M  +7    -1    resources/google-groupware/googleconfig.cpp
M  +9    -6    resources/google-groupware/googlesettings.cpp
M  +1    -2    resources/google-groupware/googlesettingswidget.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/8393e92d56ecb31b2dd65d15d046f8e02565f5e3
Comment 7 Carl Schwan 2023-09-19 17:17:45 UTC
Git commit c99afc75a503fff6ca83df2f47a5d5d951579524 by Carl Schwan.
Committed on 19/09/2023 at 19:17.
Pushed by carlschwan into branch 'release/23.08'.

Actually start job to read secret key
(cherry picked from commit 8393e92d56ecb31b2dd65d15d046f8e02565f5e3)

M  +7    -1    resources/google-groupware/googleconfig.cpp
M  +9    -6    resources/google-groupware/googlesettings.cpp
M  +1    -2    resources/google-groupware/googlesettingswidget.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/c99afc75a503fff6ca83df2f47a5d5d951579524
Comment 8 Yaroslav Sidlovsky 2023-09-20 18:48:04 UTC
 Carl Schwan: FYI, can't apply patch from c99afc75a503fff6ca83df2f47a5d5d951579524 to kdepim-runtime-23.08.1, googleconfig.cpp is missing in that version.
Maybe I'm doing something wrong?
Comment 9 Carl Schwan 2023-09-27 10:32:25 UTC
(In reply to Yaroslav Sidlovsky from comment #8)
>  Carl Schwan: FYI, can't apply patch from
> c99afc75a503fff6ca83df2f47a5d5d951579524 to kdepim-runtime-23.08.1,
> googleconfig.cpp is missing in that version.
> Maybe I'm doing something wrong?

You need a few more patches: see the email I sent to distros: https://mail.kde.org/pipermail/distributions/2023-September/001421.html

Some distros already applied the patches, which explain why some of you got a functioning google resource again.
Comment 10 jshand2013 2023-09-27 19:53:38 UTC
(In reply to Carl Schwan from comment #9)
> (In reply to Yaroslav Sidlovsky from comment #8)
> >  Carl Schwan: FYI, can't apply patch from
> > c99afc75a503fff6ca83df2f47a5d5d951579524 to kdepim-runtime-23.08.1,
> > googleconfig.cpp is missing in that version.
> > Maybe I'm doing something wrong?
> 
> You need a few more patches: see the email I sent to distros:
> https://mail.kde.org/pipermail/distributions/2023-September/001421.html
> 
> Some distros already applied the patches, which explain why some of you got
> a functioning google resource again.

i am running:

Operating System: openSUSE Tumbleweed 20230925
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Kernel Version: 6.5.4-1-default (64-bit)
Graphics Platform: X11
Processors: 2 × AMD A9-9420e RADEON R5, 5 COMPUTE CORES 2C+3G
Memory: 7.2 GiB of RAM
Graphics Processor: AMD Radeon R5 Graphics
Manufacturer: Acer
Product Name: Aspire A315-21G
System Version: V1.12

Those patches were added to last release of openSUSE Tumbleweed, but the problem still exists.

1.  After configuring a new calendar, you still get the error "account doesn't exist"
2.  When you try to restart the calendar service, it throws the error "cannot fetch password"

this issue has been a real problem for months.

the patches introduced to opensuse were:

- Add upstream changes to fix issues with the google resource
  (boo#1214714, kde#470820)
  * 0001-Revert-Revert-Use-config-plugin-instead-of-out-of-pr.patch
  * 0002-Revert-Revert-Fix-race-condition-when-building.patch
  * 0003-Actually-start-job-to-read-secret-key.patch
Comment 11 jshand2013 2023-09-27 19:54:17 UTC
this may need to be reopened.
Comment 12 jshand2013 2023-09-27 20:57:55 UTC
Created attachment 161921 [details]
debuginfod
Comment 13 Colin J Thomson 2023-09-29 18:16:42 UTC
(In reply to jshand2013 from comment #10)

Almost the same issue, I had to manually edit the agent config file and replace the "not configured" with  my ID then restart akonadi for it to work.
Time permitting I'll run more tests..
Comment 14 Colin J Thomson 2023-09-29 18:17:34 UTC
*** Bug 475028 has been marked as a duplicate of this bug. ***
Comment 15 jshand2013 2023-09-29 19:41:30 UTC
(In reply to Colin J Thomson from comment #13)
> (In reply to jshand2013 from comment #10)
> 
> Almost the same issue, I had to manually edit the agent config file and
> replace the "not configured" with  my ID then restart akonadi for it to work.
> Time permitting I'll run more tests..

thanks for the work around.  i have it working now.