Actually start job to read secret key

BUG: 470820